--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,7 +287,8 @@ a.btn.btn-find-out:hover {
   width: 80px;
   height: 80px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
 }
 
@@ -297,6 +298,9 @@ a.btn.btn-find-out:hover {
 }
 
 .certification-logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
   object-fit: contain;
