--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,7 +280,7 @@ a.btn.btn-find-out:hover {
 .certification-box {
   background-color: #fff;
   border-radius: 10px;
-  margin: 20px;
+  margin: 15px;
   padding: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: tansform 0.3s ease, box-shadow 0.3s ease;
@@ -297,13 +297,26 @@ a.btn.btn-find-out:hover {
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
-.certification-logo {
+.certification-img {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+
+.certification-logo-flex {
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 10px;
+}
+
+.certificate-logo {
+  width: 60px;
+  height: auto;
+  padding: 10px;
+  transition: transform 0.3s ease;
 }
 
 /* Social Projects Section */
@@ -379,19 +392,6 @@ a.btn.btn-find-out:hover {
   line-height: 1.5;
   margin-bottom: 15px;
   text-align: justify;
-}
-
-.certification-logo-flex {
-  background-color: #fff;
-  border-radius: 20px;
-  padding: 10px;
-}
-
-.certificate-logo {
-  width: 60px;
-  height: auto;
-  padding: 10px;
-  transition: transform 0.3s ease;
 }
 
 /* Event Section */
@@ -588,7 +588,9 @@ a.btn.btn-find-out:hover {
 /*==================
 PAGE ABOUT US
 ==================*/
-
+.about {
+  margin-top: 10vh;
+}
 
 /*==================
 PAGE SOCIAL EVENTS
@@ -741,26 +743,74 @@ COPYRIGHT
 /*================
 MEDIA QUERIES
 ================*/
-/* `sm` applies to x-small devices (portrait phones, less than 576px) */
-@media (max-width: 575.98px) {
+
+/* `lg` applies to medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) {
   /* apply here */
   header {
-    max-height: 5vh;
+    max-height: 6vh;
   }
 
-  .collapse {
-    background-color: #f8f9fa;
-    padding: 1rem 0;
+  .logo-img {
+    width: 100px;
+    height: auto;
+  }
+
+  .navbar-toggler {
+    display: block;
+  }
+
+  #offcanvasNavbar {
+    display: block;
+  }
+
+  .offcanvas-body {
+    height: 100%;
+  }
+
+  .offcanvas-title {
+    font-weight: bolder;
+  }
+
+  /* Hide navigation links and contact button on small screens */
+  nav.d-lg-flex, .contact {
+    display: none;
+  }
+
+  .certification-flex {
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    border-radius: 20px;
   }
   
   .certification-box {
-    max-height: 50px;
-    background-color: none;
-    border-radius: 10px;
-    margin: 5px;
-    padding: 5px;
+    padding: 2px;
+    margin: 10px;
     width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
+
+  .masonry-grid {
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 70px;
+    margin-bottom: 20px;
+  }
+
+  .masonry-grid .grid-item:nth-child(2) {
+    grid-row: span 1;
+  }
+
+  .certification-logo-flex {
+    width: 100%;
+    background-color: #fff;
+    border-radius: 20px;
+    padding: 2px;
+  }
+
 }
 
 @media (max-width: 765.98px) {
@@ -810,12 +860,18 @@ MEDIA QUERIES
   }
   
   .certification-box {
-    max-height: 50px;
-    background-color: none;
     border-radius: 10px;
-    margin: 5px;
+    margin: 0px 2px;
+    width: 50px;
+    height: 50px;
+  }
+
+  .certification-logo-flex {
+    padding: 8px;
+  }
+  
+  .certificate-logo {
     padding: 5px;
-    width: 60px;
   }
 
   .events-grid, .news-grid {
@@ -829,69 +885,16 @@ MEDIA QUERIES
 
 }
 
-/* `lg` applies to medium devices (tablets, less than 992px) */
-@media (max-width: 991.98px) {
+/* `sm` applies to x-small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
   /* apply here */
   header {
-    max-height: 6vh;
+    max-height: 5vh;
   }
 
-  .logo-img {
-    width: 100px;
-    height: auto;
-  }
-
-  .navbar-toggler {
-    display: block;
-  }
-
-  #offcanvasNavbar {
-    display: block;
-  }
-
-  .offcanvas-body {
-    height: 100%;
-  }
-
-  .offcanvas-title {
-    font-weight: bolder;
-  }
-
-  /* Hide navigation links and contact button on small screens */
-  nav.d-lg-flex, .contact {
-    display: none;
-  }
-
-  .certification-flex {
-    width: 100%;
-    background-color: #fff;
-    border-radius: 20px;
+  .collapse {
+    background-color: #f8f9fa;
+    padding: 1rem 0;
   }
   
-  .certification-box {
-    padding: 2px;
-    width: 60px;
-    height: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .masonry-grid {
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 70px;
-    margin-bottom: 20px;
-  }
-
-  .masonry-grid .grid-item:nth-child(2) {
-    grid-row: span 1;
-  }
-
-  .certification-logo-flex {
-    width: 100%;
-    background-color: #fff;
-    border-radius: 20px;
-    padding: 2px;
-  }
-
 }
