--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -588,8 +588,21 @@ a.btn.btn-find-out:hover {
 /*==================
 PAGE ABOUT US
 ==================*/
-.about {
-  margin-top: 10vh;
+.welcome-section {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.btn-contact {
+  background-color: #555;
+  color: #fff;
+}
+
+.btn-contact:hover {
+  background-color: #333;
+  color: #fff;
 }
 
 /*==================
@@ -744,6 +757,12 @@ COPYRIGHT
 MEDIA QUERIES
 ================*/
 
+@media (max-width: 1186px) {
+  .about {
+    margin-top: 15vh;
+  }
+}
+
 /* `lg` applies to medium devices (tablets, less than 992px) */
 @media (max-width: 991.98px) {
   /* apply here */
@@ -809,6 +828,10 @@ MEDIA QUERIES
     background-color: #fff;
     border-radius: 20px;
     padding: 2px;
+  }
+
+  .about {
+    margin-top: 10vh;
   }
 
 }
