--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,6 +239,7 @@ MAIN
 /* Video container */
 .video-container {
   position: relative;
+  justify-content: center;
   padding-bottom: 56.25%;
   height: 0;
   overflow: hidden;
@@ -358,7 +359,7 @@ a.btn.btn-find-out:hover {
   height: auto;
   display: block;
   transition: transform 0.4s ease, opacity 0.4s ease;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .grid-item img:hover {
@@ -593,6 +594,13 @@ PAGE ABOUT US
   width: 100%;
   height: 100vh;
   overflow: hidden;
+}
+
+.welcome {
+  position: absolute;
+  text-align: center;
+  padding: 150px;
+  color: #fff;
 }
 
 .btn-contact {
@@ -834,9 +842,13 @@ MEDIA QUERIES
     margin-top: 10vh;
   }
 
+  .welcome {
+    padding: 80px;
+  }
+
 }
 
-@media (max-width: 765.98px) {
+@media (max-width: 768.98px) {
   .logo-img {
     width: 70px;
     height: auto;
@@ -904,6 +916,10 @@ MEDIA QUERIES
 
   .event-card, .news-card {
     width: 90%;
+  }
+
+  .welcome {
+    padding: 50px;
   }
 
 }
