--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -821,6 +821,22 @@ PAGE PRODUCT NATURAL COCONUT SUGAR SPICES
   object-fit: contain;
 }
 
+.img-box-2 {
+  width: 100%;
+  height: 300px;
+  padding: 15px;
+}
+
+.product-img-2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  object-fit: cover;
+}
+
 /*=================================
 PAGE PRODUCT NATURAL ARENGA SUGAR
 =================================*/
@@ -971,7 +987,7 @@ PAGE PRODUCT NATURAL DRIVATIVES
   margin-bottom: 20px;
 }
 
-.culinary-uses-section h3 {
+.culinary-uses-section h3, .cp-uses-section h3 {
   font-size: 1.5rem;
   font-weight: bold;
   color: #333;
