--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -821,6 +821,12 @@ PAGE PRODUCT NATURAL COCONUT SUGAR SPICES
   padding: 15px;
 }
 
+.img-box-3 {
+  width: 600px;
+  height: 500px;
+  padding: 15px;
+}
+
 .product-img-2 {
   display: flex;
   align-items: center;
@@ -1462,6 +1468,12 @@ MEDIA QUERIES
 
   .varieties-section .product-text {
     margin-top: 15px;
+  }
+
+  .img-box-3 {
+    width: 400px;
+    height: 300px;
+    padding: 15px;
   }
   
 }
