--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -796,6 +796,237 @@ PAGE CONTACT US
 ==================*/
 
 
+/*==================
+PAGE NEWS
+==================*/
+
+#news-header {
+    height: 40vh;
+    background-image: url('../img/hero2.jpg');
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    text-align: center;
+    position: relative;
+}
+
+#news-header::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
+.header-content {
+    position: relative;
+    z-index: 2;
+}
+
+#sidebar {
+  padding: 1rem;
+}
+
+.sidebar-content {
+  border: 1px solid #ddd;
+  border-radius: 15px;
+  padding: 1.5rem;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.sidebar-section {
+  margin-bottom: 2rem;
+  padding-bottom: 1rem;
+}
+
+.sidebar-section:last-child {
+  border-right: none;
+}
+
+.sidebar-title {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 1rem;
+}
+
+.categories-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.categories-list li {
+  background-color: #e0e0e0;
+  border-radius: 20px;
+  padding: 5px 10px;
+}
+
+.categories-list a {
+  color: #333;
+  font-size: 1rem;
+  text-decoration: none;
+}
+
+.categories-list a:hover {
+  text-decoration: underline;
+}
+
+.tags {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+}
+
+.tag {
+  background-color: #e0e0e0;
+  color: #333;
+  border-radius: 20px;
+  padding: 5px 10px;
+  font-size: 0.9rem;
+  text-decoration: none;
+}
+
+.tag:hover {
+  background-color: #ccc;
+}
+
+#newsletter-form {
+  margin-top: 1rem;
+}
+
+#newsletter-form input {
+  padding: 0.8rem;
+  border-radius: 8px;
+  border: 1px solid #ddd;
+  color: #555;
+  margin-bottom: 0.8rem;
+}
+
+#newsletter-form button {
+  background-color: #333;
+  color: #fff;
+  border-radius: 8px;
+  padding: 0.8rem;
+  border: none;
+}
+
+#newsletter-form button:hover {
+  background-color: #555;
+}
+
+.newsletter-section {
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+/* Berita Populer */
+.news-popular {
+  display: flex;
+  flex-direction: column;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.news-popular img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.news-popular .content {
+  padding: 1rem;
+}
+
+.news-popular h3 {
+  margin: 0;
+}
+
+.news-popular .author {
+  font-size: 0.875rem;
+  color: #777;
+}
+
+.news-popular .btn {
+  margin-top: 0.5rem;
+  padding: 0.5rem 1rem;
+  background-color: #333;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+}
+
+/* Berita Terbaru */
+.news-latest {
+  display: grid;
+  gap: 1rem;
+}
+
+.news-latest article {
+  display: flex;
+  flex-direction: column;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.news-latest .btn {
+  margin-top: 0.5rem;
+  padding: 0.5rem 0.5rem;
+  background-color: #333;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 10px;
+}
+
+.news-latest img {
+  width: 100%;
+  height: 120px;
+  object-fit: cover;
+}
+
+.news-latest .content {
+  padding: 0.5rem;
+}
+
+/* Berita Lainnya */
+.news-other {
+  display: grid;
+  gap: 0.75rem;
+}
+
+.news-other article {
+  padding: 1rem;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.news-other .icon {
+  margin-right: 0.5rem;
+}
+
+.news-popular:hover, .news-latest article:hover {
+  transform: scale(1.02);
+  transition: transform 0.2s;
+}
+
 /*=================================
 PAGE PRODUCT ORGANIC COCONUT SUGAR
 =================================*/
@@ -1328,7 +1559,7 @@ MEDIA QUERIES
     font-size: 1rem;
     color: #555;
   }
-  
+
   .benefit-list li {
     margin-bottom: 8px;
     text-align: justify;
@@ -1342,6 +1573,29 @@ MEDIA QUERIES
 
   #header-section-image .video-container {
     margin-top: 50px;
+  }
+
+  .news-section {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 1rem;
+    padding: 1rem;
+  }
+
+  .news-popular {
+    grid-column: 1/3;
+  }
+
+  .news-latest {
+    grid-column: 3/5;
+  }
+
+  .news-other {
+    grid-column: 1/5;
+  }
+
+  .news-other article {
+    flex-direction: row;
   }
 }
 
@@ -1384,7 +1638,7 @@ MEDIA QUERIES
     background-color: #fff;
     border-radius: 20px;
   }
-  
+
   .certification-box {
     padding: 2px;
     margin: 10px;
@@ -1406,6 +1660,16 @@ MEDIA QUERIES
     padding: 80px;
   }
 
+  #sidebar {
+    margin-top: 1rem;
+  }
+
+  .sidebar-content {
+    padding: 1rem;
+    border-radius: 10px;
+    margin-bottom: 2rem;
+  }
+
 }
 
 @media (max-width: 768.98px) {
@@ -1415,7 +1679,7 @@ MEDIA QUERIES
     height: 100vh;
     width: 100%;
   }
-  
+
   .under-construction img {
     object-fit: cover;
     width: 70%;
@@ -1426,6 +1690,7 @@ MEDIA QUERIES
     min-width: 70px;
     height: auto;
   }
+
   .carousel-caption h5 {
     font-size: 1.5rem;
   }
@@ -1446,7 +1711,7 @@ MEDIA QUERIES
   .about-title {
     font-size: 1.1rem;
   }
-  
+
   .about-text {
     font-size: 1rem;
   }
@@ -1466,7 +1731,7 @@ MEDIA QUERIES
   .footer-title {
     font-size: 1.25rem;
   }
-  
+
   .certification-box {
     border-radius: 10px;
     margin: 0px 2px;
@@ -1477,7 +1742,7 @@ MEDIA QUERIES
   .certification-logo-flex {
     padding: 8px;
   }
-  
+
   .certificate-logo {
     padding: 5px;
   }
@@ -1498,25 +1763,25 @@ MEDIA QUERIES
   #header-image .card-img-overlay {
     padding: 80px;
   }
-  
+
   #header-image .product-header-title {
     font-size: 1.7rem;
     margin-bottom: 1rem;
   }
-  
+
   #header-image .product-description {
     font-size: 1rem;
     max-width: 60%;
   }
-  
+
   #header-project-image .card-img-overlay {
     padding: 50px;
   }
-  
+
   #header-project-image .project-header-title {
     font-size: 1.7rem;
   }
-  
+
   #header-project-image .project-description {
     font-size: 1rem;
     max-width: 60%;
@@ -1525,15 +1790,15 @@ MEDIA QUERIES
   .product-detail {
     padding: 20px 10px;
   }
-  
+
   .product-title {
     font-size: 1.8rem;
   }
-  
+
   .product-text {
     font-size: 1.1rem;
   }
-  
+
   #header-section-image .card-img-overlay {
     padding: 50px;
   }
@@ -1541,7 +1806,7 @@ MEDIA QUERIES
   .vision-title {
     font-size: 1rem;
   }
-  
+
   .mision-list {
     font-size: 1rem;
   }
@@ -1581,12 +1846,12 @@ MEDIA QUERIES
   #header-image .card-img-overlay {
     padding: 40px;
   }
-  
+
   #header-image .product-header-title {
     font-size: 1.5rem;
     margin-bottom: 1rem;
   }
-  
+
   #header-image .product-description {
     font-size: 0.8rem;
     max-width: 70%;
@@ -1595,16 +1860,16 @@ MEDIA QUERIES
   #header-project-image .card-img-overlay {
     padding: 40px;
   }
-  
+
   #header-project-image .project-header-title {
     font-size: 1.5rem;
   }
-  
+
   #header-project-image .project-description {
     font-size: 0.8rem;
     max-width: 70%;
   }
-  
+
   .product-text {
     font-size: 1rem;
   }
@@ -1613,7 +1878,7 @@ MEDIA QUERIES
     font-size: 0.9rem;
     color: #555;
   }
-  
+
   .benefit-list li {
     margin-bottom: 5px;
     text-align: justify;
@@ -1631,7 +1896,7 @@ MEDIA QUERIES
     animation: zoomOut 4s ease-out;
     z-index: -999;
   }
-  
+
   .background-section-image img {
     object-fit: cover;
     width: 100%;
@@ -1641,7 +1906,7 @@ MEDIA QUERIES
   #header-section-image .welcome {
     padding: 10px;
   }
-  
+
   #header-section-image .card-img-overlay {
     padding: 20px;
   }
@@ -1659,5 +1924,27 @@ MEDIA QUERIES
     height: 300px;
     padding: 15px;
   }
-  
+
+  #sidebar {
+    display: none;
+  }
+
+  .news-section {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 1rem;
+    padding: 1rem;
+  }
+
+  .news-popular {
+    grid-column: 1/5;
+  }
+
+  .news-latest {
+    grid-column: 1/5;
+  }
+
+  .news-other {
+    display: none;
+  }
 }
